org_moved_to_kermeta2_git/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/Constraint/001_ConstraintTest.kmt
/* $Id:$ 
 * Creation : December 29, 2010
 * Licence  : EPL 
 * Copyright:
 * Authors  : 
 *            dvojtise
 */


// The test is no longer relevant because an error will be
// raised by the resolver anyway....

package test {
	class Main
	{
		
		
		inv testInvariant is do
			do
				result:=true
			end
		end
		
		

		
	}
	

}

